[package]
name = "redis-script"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
argh = "0.1"
redis = { version = "0.21", features = ["tokio-comp"] }
tokio = { version = "1.12", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
